# fast-eint

./: Cargo.toml  build.rs
benches/: mul256_benchmark.rs
src/: lib.c  lib.rs
tests/: test_add256.proptest-regressions  test_add256.rs  test_add512.proptest-regressions  test_add512.rs  test_mul256.rs  test_narrowing_right_shift_512.proptest-regressions  test_narrowing_right_shift_512.rs  test_sbc256.proptest-regressions  test_sbc256.rs  test_sub256.proptest-regressions  test_sub256.rs  test_wrapping_mul256.proptest-regressions  test_wrapping_mul256.rs
