[package]
name = "fast-eint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
eint = "0.1.8"
rand_chacha = "0.3.1"
proptest = "1.0.0"
criterion = "0.3.6"

[[bench]]
name = "mul256_benchmark"
harness = false

[profile.release]
debug = true
